--- a/app/readme.text
+++ b/app/readme.text
@@ -27,4 +27,4 @@ http://172.16.238.8:8080/st/person!findPersonByNumber?number=0
    "major" : "?????"
 }
 3.修改个人密码
-http://172.16.238.8:8080/st/person!updatePassword.action?old_password=2&new_password=1
+172.16.238.8:8080/st/person!updatePasswordAndroid.action?old_password=2&new_password=1
