--- a/app/readme.text
+++ b/app/readme.text
@@ -30,3 +30,7 @@ http://172.16.238.8:8080/st/person!findPersonByNumber?number=0
 172.16.238.8:8080/st/person!updatePasswordAndroid.action?old_password=2&new_password=1
 3.查看课程
 172.16.238.8:8080/st/course!findCourseAndroid?number=0
+4.根据课程评价教师
+http://172.28.214.3:8080/st/course!findEvaluationListAndroid?courseId=2c906e884d4d1ae8014d4d1ecde50008
+5.查找教师
+http://172.28.214.3:8080/st/course!findTeacherAndroid.action?number=20111308011
