--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="load_fail">加载失败</string>
     <string name="dialogcancle">取消</string>
     <string name="loginOut">注销</string>
-
+    <string name="title_activity_advice_teacher">教师留言</string>
+    <string name="title_activity_advice_course">课程评价</string>
 
 </resources>
