--- a/app/readme.text
+++ b/app/readme.text
@@ -34,3 +34,5 @@ http://172.16.238.8:8080/st/person!findPersonByNumber?number=0
 http://172.28.214.3:8080/st/course!findEvaluationListAndroid?courseId=2c906e884d4d1ae8014d4d1ecde50008
 5.查找教师
 http://172.28.214.3:8080/st/course!findTeacherAndroid.action?number=20111308011
+6.教师留言
+http://172.28.214.3:8080/st/result!addMessageAndroid.action?
